# Academic-Assignments

./: .gitignore  README.md  pyproject.toml
Colonialism and Development (Acemoglu 2021)/: main.ipynb
Impact of religion on economic development/: main.ipynb
Impact of religion on economic development/Data/: 1.dept_dataset (3).dta  2a.canton_dataset_HHexpenditure (2).dta  2b.canton_dataset_schooling (2).dta  4.district_dataset.dta
Religion and Economic Development/: main.ipynb
Religion and economic development/: README.md
The Colonial Origins of Comparative Development/: README.md
The Colonial Origins of Comparative Development(Acemoglu 2021)/: README.md  main.ipynb
Uv_files/: pyproject.toml
Voters response to information/: README.md  main.ipynb
